# torrent-finder-cli

./: .gitignore  CONTEXT.md  LICENSE  README.md  constants.py  creator_search.py  credentials.py  downloader.py  filters.py  jimaku.py  main.py  online_fix.py  pyproject.toml  requirements.txt  rutracker.py  security.py  state.py  stats.py  subtitles.py  torrent.bat  torrent_info.py  torrent_meta.py  torrent_search.py  torrent_session.py  updates.py  utils.py
.github/workflows/: release.yml
docs/: roadmap.md
docs/adr/: 0001-provider-slug-identity.md  0002-single-store-for-persistence.md  0003-acquisition-seam.md  0004-provider-registry-drives-cli-choices.md  0005-credential-registry-owns-integration-metadata.md  0006-machine-stable-state-path.md  0007-managed-terminal-command-presets.md  0008-responsive-terminal-layout.md  0009-apibay-last-known-good-and-emergency-engines.md  0010-knaben-and-explicit-engine-modes.md
providers/: __init__.py  anime_provider.py  base.py  game_provider.py  manga_provider.py  mobile_provider.py  movie_provider.py  online_fix_provider.py  rutracker_provider.py  software_provider.py
resolvers/: __init__.py  anilist.py  games.py  igdb.py  jikan.py  movies.py  tmdb.py  types.py  wikidata.py
scripts/: stress_apibay.py  stress_knaben.py
tests/: test_acquisition_characterization.py  test_acquisition_seam.py  test_apibay_cache.py  test_apibay_resilience.py  test_book_provider.py  test_cancel_navigation.py  test_credential_registry.py  test_download_method_menu.py  test_engine_fallback_state.py  test_engine_mode_ui.py  test_knaben.py  test_knaben_provider_defaults.py  test_launcher_alias.py  test_movie_provider_defaults.py  test_openlibrary_resolver.py  test_persistence_location.py  test_provider_registry.py  test_query_prompt.py  test_responsive_layout.py  test_result_contract_characterization.py  test_search_prompt_shortcuts.py  test_terminal_check.py  test_terminal_command_menu.py  test_tips.py  test_update_notice.py
torrent_finder/: __init__.py  __main__.py  acquisition.py  apibay_cache.py  constants.py  creator_search.py  credential_registry.py  credentials.py  downloader.py  filters.py  fitgirl.py  jimaku.py  knaben.py  launcher_alias.py  libgen.py  madokami.py  main.py  online_fix.py  rutracker.py  search_result.py  security.py  state.py  stats.py  store.py  subtitles.py  terminal_check.py  torrent_info.py  torrent_meta.py  torrent_session.py  updates.py  utils.py
torrent_finder/providers/: __init__.py  anime_provider.py  base.py  book_provider.py  fitgirl_provider.py  game_provider.py  madokami_provider.py  manga_provider.py  mobile_provider.py  movie_provider.py  online_fix_provider.py  rutracker_provider.py  software_provider.py
torrent_finder/resolvers/: __init__.py  anilist.py  games.py  igdb.py  jikan.py  movies.py  openlibrary.py  tmdb.py  wikidata.py
torrent_finder/ui/: creator.py  credentials.py  history.py  launcher.py  layout.py  prompts.py  selector.py  stats.py  streaming.py  table.py  tips.py  tips_page.py
ui/: __init__.py  creator.py  history.py  prompts.py  selector.py  stats.py  streaming.py  table.py  tips.py  tips_page.py
