[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-finder-cli"
version = "0.1.0"
description = "Search torrents across multiple sources from your terminal and hand them to your client — subtitles, episode picking, batch download, and search-by-creator."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pietro Filippo" }]
keywords = ["torrent", "cli", "tui", "magnet", "search", "subtitles"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
# NOTE: deps mirror requirements.txt. subliminal/babelfish are only imported
# lazily (subtitle search), but are required for that feature to work.
dependencies = [
    "requests",
    "rich",
    "readchar",
    "subliminal",
    "babelfish",
]

# TODO before PyPI: add a `license = { file = "LICENSE" }` (and a LICENSE file).
# An unlicensed public package is "all rights reserved", which discourages use.

[project.urls]
Homepage = "https://github.com/PietroFilippo/torrent-finder-cli"
Repository = "https://github.com/PietroFilippo/torrent-finder-cli"

[project.scripts]
torrent-finder = "torrent_finder.main:main"

# One top-level package now — discover it and its subpackages.
[tool.setuptools.packages.find]
include = ["torrent_finder*"]
